--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -35,6 +35,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: core
+    BuildTargetingString: '*'
     ValidateFormatting: true
     Artifacts:
     - name: azure-core
