--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -35,7 +35,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: core
-    BuildTargetingString: '*'
+    BuildTargetingString: generic-core
     ValidateFormatting: true
     Artifacts:
     - name: azure-core
